erDiagram
    N8NConfiguration ||--o{ WorkflowErrorLog : "has errors"
    User ||--o{ N8NConfiguration : "creates"

    N8NConfiguration {
        Guid Id PK
        string Name
        string BaseUrl
        string ApiKeyEncrypted
        string WebhookUrl
        bool IsActive
        DateTime LastTestedAt
        string LastTestResult
        DateTime CreatedAt
        DateTime UpdatedAt
        Guid CreatedByUserId FK
    }

    WorkflowErrorLog {
        Guid Id PK
        string WorkflowId
        string ExecutionId
        string ErrorMessage
        string NodeName
        int RetryCount
        string StackTrace
        DateTime CreatedAt
    }

    User {
        Guid Id PK
        string Email
        string DisplayName
    }
